# src/gs-api/src/models/immeuble-affiche-dto.ts
@@ -1,0 +1,11 @@
+/* tslint:disable */
+export interface ImmeubleAfficheDto {
+  nbrEtage?: number;
+  nbrePieceImmeuble?: number;
+  abrvNomImmeuble?: string;
+  descriptionImmeuble?: string;
+  numeroImmeuble?: number;
+  nomPropio?: string;
+  prenomProprio?: string;
+  garrage?: boolean; 
+}
